[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/interface/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/interface/Interface.gd" type="Script" id=2]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 20.0
[connection signal="health_changed" from="." to="Bar" method="_on_Interface_health_changed"]
[connection signal="health_initialize" from="." to="Bar" method="_on_Interface_health_initialize"]
